--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        batch: [1]
+        batch: [1, 2, 3, 4, 5]
 
     name: Reverse dependency checks (batch ${{ matrix.batch }})
 
@@ -27,19 +27,19 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: rstanarm local::.
-
       - name: Install R Package Build Dependencies
         uses: r-hub/actions/setup-r-sysreqs@v1
         with:
           type: full
 
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: rstanarm BH RcppEigen RcppParallel local::.
+
       - name: Check reverse dependencies (batch ${{ matrix.batch }})
         run: |
           revdeps <- tools::package_dependencies("rstantools", reverse = TRUE, which = "all")$rstantools
-          revdeps <- split(revdeps,  cut(seq_along(revdeps), 10, labels = FALSE))
+          revdeps <- split(revdeps,  cut(seq_along(revdeps), 5, labels = FALSE))
           curr_revdeps <- revdeps[[${{ matrix.batch }}]]
 
           revdep_details <- available.packages()[available.packages()[,"Package"] %in% curr_revdeps,]
@@ -53,7 +53,7 @@ jobs:
             mode = "wb"
           )
 
-          pak::pak(revdep_details[,"Package"], dependencies = TRUE)
+          pak::pak(revdep_details[,"Package"])
 
           tools::check_packages_in_dir("./revdepchecks", Ncpus = 3)
         shell: Rscript {0}
