--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -10,7 +10,7 @@ name: Reverse Dependency Checks
 
 jobs:
   revdep-checks:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
@@ -26,16 +26,14 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
+
+      - name: Install R Package Build Dependencies
+        uses: r-hub/actions/setup-r-sysreqs@v1
         with:
-          use-public-rspm: true
+          type: full
 
-      #- name: Install R Package Build Dependencies
-      #  uses: r-hub/actions/setup-r-sysreqs@v1
-      #  with:
-      #    type: full
-
-      #- name: Install additional build dependencies
-      #  run: brew install jags
+      - name: Install additional build dependencies
+        run: brew install jags
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -67,7 +65,7 @@ jobs:
 
           pak::pak(revdep_details[,"Package"])
 
-          tools::check_packages_in_dir("./revdepchecks", Ncpus = 4)
+          tools::check_packages_in_dir("./revdepchecks", Ncpus = 3)
 
           res <- tools::check_packages_in_dir_details("revdepchecks/")
           saveRDS(res, file = "batch-${{ matrix.batch }}-status.rds")
@@ -81,7 +79,7 @@ jobs:
 
 # Combine all results
   combine-results:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: revdep-checks
     if: always()
 
