--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -10,7 +10,7 @@ name: Reverse Dependency Checks
 
 jobs:
   revdep-checks:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -26,14 +26,16 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-
-      - name: Install R Package Build Dependencies
-        uses: r-hub/actions/setup-r-sysreqs@v1
         with:
-          type: full
+          use-public-rspm: true
+
+      #- name: Install R Package Build Dependencies
+      #  uses: r-hub/actions/setup-r-sysreqs@v1
+      #  with:
+      #    type: full
 
       - name: Install additional build dependencies
-        run: brew install jags
+        run: sudo apt install jags
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -80,7 +82,7 @@ jobs:
 
 # Combine all results
   combine-results:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: revdep-checks
     if: always()
 
