--- a/.github/workflows/reverse-dependencies.yaml
+++ b/.github/workflows/reverse-dependencies.yaml
@@ -28,8 +28,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
 
       #- name: Install R Package Build Dependencies
       #  uses: r-hub/actions/setup-r-sysreqs@v1
@@ -106,7 +104,8 @@ jobs:
 
           res_error <- res[res$Status == "ERROR", ]
           if (nrow(res_error) > 0) {
-            stop("Error in: ", paste(res_error$Package, collapse=", "))
+            stop("The following packages had check errors: ", paste(res_error$Package, collapse=", "),
+                 call. = FALSE)
           }
         shell: Rscript {0}
 
